--- a/grocery/pyproject.toml
+++ b/grocery/pyproject.toml
@@ -10,8 +10,10 @@ requires-python = ">=3.12"
 dependencies = [
     "catboost>=1.2.5",
     "joblib>=1.4.2",
+    "matplotlib>=3.10.1",
     "numpy~=1.26.4",
     "polars>=1.22.0",
+    "requests>=2.32.3",
     "scikit-learn>=1.6.1",
     "scipy>=1.15.2",
     "tqdm>=4.67.1",
