--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "grocery",
+    "implicit==0.7.2",
+    "ipykernel>=6.29.5",
+    "joblib>=1.4.2",
+    "jupyter>=1.1.1",
+    "transformers==4.49.0",
 ]
 
 [tool.uv.sources]
