--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,22 @@ description = "Recommender Systems course"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "catboost==1.2.5",
     "grocery",
     "implicit==0.7.2",
     "ipykernel>=6.29.5",
-    "joblib>=1.4.2",
+    "joblib==1.4.2",
     "jupyter>=1.1.1",
+    "matplotlib==3.10.1",
+    "numba==0.61.0",
+    "numpy==1.26.4",
+    "polars==1.27.1",
+    "scikit-learn==1.6.1",
+    "scipy==1.15.2",
+    "seaborn==0.13.2",
+    "tqdm==4.67.1",
     "transformers==4.49.0",
+    "voyager==2.1.0",
 ]
 
 [tool.uv.sources]
