--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "catboost==1.2.5",
+    "duckdb>=1.2.2",
     "grocery",
     "implicit==0.7.2",
     "ipykernel>=6.29.5",
